--- a/package.json
+++ b/package.json
@@ -19,27 +19,27 @@
     "@expo/vector-icons": "^14.0.2",
     "@neondatabase/serverless": "^0.10.3",
     "@react-navigation/native": "^6.0.2",
-    "expo": "^51.0.38",
-    "expo-constants": "~16.0.2",
-    "expo-font": "~12.0.9",
-    "expo-linking": "~6.3.1",
-    "expo-router": "^3.1.0",
-    "expo-secure-store": "^13.0.2",
-    "expo-splash-screen": "~0.27.5",
-    "expo-status-bar": "~1.12.1",
-    "expo-system-ui": "~3.0.7",
-    "expo-web-browser": "~13.0.3",
+    "expo": "^52.0.6",
+    "expo-constants": "~17.0.3",
+    "expo-font": "~13.0.1",
+    "expo-linking": "~7.0.2",
+    "expo-router": "~4.0.5",
+    "expo-secure-store": "~14.0.0",
+    "expo-splash-screen": "~0.29.9",
+    "expo-status-bar": "~2.0.0",
+    "expo-system-ui": "~4.0.2",
+    "expo-web-browser": "~14.0.1",
     "metro": "^0.81.0",
     "metro-react-native-babel-preset": "^0.77.0",
     "nativewind": "^4.1.21",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.74.5",
-    "react-native-gesture-handler": "~2.16.1",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-native": "0.76.1",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-modal": "^13.0.1",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "^4.14.0",
-    "react-native-screens": "3.31.1",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.0.0",
     "react-native-swiper": "^1.6.0",
     "react-native-web": "~0.19.10",
     "tailwindcss": "^3.4.14"
@@ -48,15 +48,15 @@
     "@babel/core": "^7.20.0",
     "@types/jest": "^29.5.12",
     "@types/node": "^22.8.6",
-    "@types/react": "~18.2.45",
+    "@types/react": "~18.3.12",
     "@types/react-native": "^0.72.8",
     "@types/react-test-renderer": "^18.0.7",
     "eslint": "^8.57.0",
-    "eslint-config-expo": "~7.1.2",
+    "eslint-config-expo": "~8.0.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "jest": "^29.2.1",
-    "jest-expo": "~51.0.3",
+    "jest-expo": "~52.0.1",
     "prettier": "^3.3.3",
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
