--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@clerk/clerk-expo": "^2.3.0",
     "@expo/vector-icons": "^14.0.2",
     "@neondatabase/serverless": "^0.10.3",
+    "@react-native-picker/picker": "^2.9.0",
     "@react-navigation/native": "^6.0.2",
     "expo": "^51.0.39",
     "expo-constants": "~16.0.2",
@@ -41,6 +42,7 @@
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "^3.31.1",
     "react-native-swiper": "^1.6.0",
+    "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.10",
     "tailwindcss": "^3.4.14"
   },
