--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-native-picker/picker": "^2.9.0",
     "@react-navigation/native": "^6.0.2",
     "expo": "^51.0.39",
+    "expo-blur": "^14.0.1",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
@@ -37,6 +38,7 @@
     "react-dom": "^18.2.0",
     "react-native": "^0.74.5",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-ionicons": "^4.6.5",
     "react-native-modal": "^13.0.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "^4.14.0",
@@ -44,7 +46,8 @@
     "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.10",
-    "tailwindcss": "^3.4.14"
+    "tailwindcss": "^3.4.14",
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
