--- a/app.json
+++ b/app.json
@@ -30,7 +30,7 @@
       [
         "expo-router",
         {
-          "origin": "https://uber.com/"
+          "origin": "https://hotlinefinance.app/"
         }
       ],
       "expo-font",
