--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "metro": "^0.81.0",
     "metro-react-native-babel-preset": "^0.77.0",
     "nativewind": "^4.1.21",
+    "pg": "^8.11.3",
+    "postgres": "^3.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "^0.74.5",
@@ -47,6 +49,7 @@
     "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.10",
+    "react-native-webview": "^13.12.5",
     "tailwindcss": "^3.4.14",
     "ws": "^8.18.0",
     "zustand": "^5.0.1"
