Update app configuration and dependencies; enhance profile component
- Changed app scheme to 'budgetapp' and updated user interface style to 'light'.
- Added asset bundle patterns and iOS bundle identifier for better app configuration.
- Updated package dependencies: replaced 'plaid' with 'pg' and 'postgres', and downgraded 'react-native-webview' version.
- Enhanced the Profile component by adding a 'Connect Bank Account' button for improved user interaction.
- Refactored package-lock.json to reflect the updated dependencies and removed unused packages.

--- a/app.json
+++ b/app.json
@@ -5,21 +5,29 @@
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
-    "scheme": "myapp",
-    "userInterfaceStyle": "automatic",
+    "scheme": "budgetapp",
+    "userInterfaceStyle": "light",
     "splash": {
       "image": "./assets/images/splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.hemal.budgetapp",
+      "config": {
+        "usesNonExemptEncryption": false
+      }
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.hemal.budgetapp"
     },
     "web": {
       "bundler": "metro",
@@ -38,6 +46,14 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {
+        "origin": "https://hotlinefinance.app/"
+      },
+      "eas": {
+        "projectId": "3ae72a69-aec2-44da-bdfa-b2536d86ae7c"
+      }
     }
   }
 }
