--- a/package.json
+++ b/package.json
@@ -43,13 +43,14 @@
     "react-native-gesture-handler": "~2.16.1",
     "react-native-ionicons": "^4.6.5",
     "react-native-modal": "^13.0.1",
+    "react-native-plaid-link-sdk": "^11.13.3",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "^3.31.1",
     "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.10",
-    "react-native-webview": "^13.12.5",
+    "react-native-webview": "13.8.6",
     "tailwindcss": "^3.4.14",
     "ws": "^8.18.0",
     "zustand": "^5.0.1"
