Enhance bank integration and transaction management
- Updated app.json to include expo-build-properties for iOS configuration.
- Modified metro.config.js to support additional source file extensions.
- Added Plaid integration for bank account connections, including improved transaction fetching and error handling.
- Refactored transaction API to support clerkId for better user-specific data management.
- Enhanced ConnectBankScreen with loading states and account data display.
- Updated TransactionCard to differentiate between manual and Plaid transactions.
- Improved error handling and logging across various components and APIs.
- Updated package.json and package-lock.json to reflect new dependencies and versions.

--- a/app.json
+++ b/app.json
@@ -42,7 +42,16 @@
         }
       ],
       "expo-font",
-      "expo-secure-store"
+      "expo-secure-store",
+      [
+        "expo-build-properties",
+        {
+          "ios": {
+            "deploymentTarget": "14.0",
+            "useFrameworks": "static"
+          }
+        }
+      ]
     ],
     "experiments": {
       "typedRoutes": true
