--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@react-navigation/native": "^6.0.2",
     "expo": "^51.0.39",
     "expo-blur": "^14.0.1",
+    "expo-build-properties": "~0.12.5",
     "expo-constants": "~16.0.2",
+    "expo-dev-client": "~4.0.29",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
     "expo-router": "^3.5.24",
@@ -62,6 +64,7 @@
     "@types/react": "~18.3.12",
     "@types/react-native": "^0.72.8",
     "@types/react-test-renderer": "^18.0.7",
+    "@types/ws": "^8.5.13",
     "eslint": "^8.57.0",
     "eslint-config-expo": "~8.0.1",
     "eslint-config-prettier": "^9.1.0",
