--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@types/node": "^22.8.6",
     "@types/react": "~18.3.12",
     "@types/react-native": "^0.72.8",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.7",
     "@types/ws": "^8.5.13",
     "eslint": "^8.57.0",
