--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@clerk/clerk-expo": "^2.3.0",
     "@expo/vector-icons": "^14.0.4",
     "@neondatabase/serverless": "^0.10.3",
+    "@react-native-community/datetimepicker": "8.0.1",
     "@react-native-picker/picker": "^2.9.0",
     "@react-navigation/native": "^6.0.2",
     "expo": "^51.0.39",
