--- a/package.json
+++ b/package.json
@@ -46,7 +46,9 @@
     "react-native-calendars": "^1.1307.0",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-gifted-charts": "^1.4.60",
     "react-native-ionicons": "^4.6.5",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-modal": "^13.0.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "^4.14.0",
