--- a/package.json
+++ b/package.json
@@ -18,46 +18,46 @@
     "@clerk/clerk-expo": "^2.3.0",
     "@expo/vector-icons": "^14.0.4",
     "@neondatabase/serverless": "^0.10.3",
-    "@react-native-community/datetimepicker": "8.0.1",
+    "@react-native-community/datetimepicker": "8.2.0",
     "@react-native-picker/picker": "^2.9.0",
-    "@react-navigation/native": "^6.0.2",
+    "@react-navigation/native": "^7.0.14",
     "date-fns": "^4.1.0",
-    "expo": "^51.0.39",
-    "expo-blur": "^14.0.1",
-    "expo-build-properties": "^0.11.1",
-    "expo-constants": "~16.0.2",
-    "expo-dev-client": "~4.0.29",
-    "expo-font": "~12.0.9",
-    "expo-linking": "~6.3.1",
-    "expo-router": "^3.5.24",
-    "expo-secure-store": "^13.0.2",
-    "expo-splash-screen": "^0.27.7",
-    "expo-status-bar": "~1.12.1",
-    "expo-system-ui": "~3.0.7",
-    "expo-web-browser": "~13.0.3",
+    "expo": "^52.0.0",
+    "expo-blur": "~14.0.3",
+    "expo-build-properties": "~0.13.3",
+    "expo-constants": "~17.0.8",
+    "expo-dev-client": "~5.0.20",
+    "expo-font": "~13.0.4",
+    "expo-linking": "~7.0.5",
+    "expo-router": "~4.0.21",
+    "expo-secure-store": "~14.0.1",
+    "expo-splash-screen": "~0.29.24",
+    "expo-status-bar": "~2.0.1",
+    "expo-system-ui": "~4.0.9",
+    "expo-web-browser": "~14.0.2",
     "metro": "^0.81.0",
     "metro-react-native-babel-preset": "^0.77.0",
     "nativewind": "^4.1.21",
     "pg": "^8.11.3",
     "postgres": "^3.4.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-native": "^0.74.5",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-native": "0.76.9",
     "react-native-calendars": "^1.1307.0",
     "react-native-chart-kit": "^6.12.0",
-    "react-native-gesture-handler": "~2.16.1",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-gifted-charts": "^1.4.60",
     "react-native-ionicons": "^4.6.5",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-modal": "^13.0.1",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "^4.14.0",
-    "react-native-screens": "^3.31.1",
-    "react-native-svg": "15.2.0",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-svg": "15.8.0",
     "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.10",
-    "react-native-webview": "13.8.6",
+    "react-native-webview": "13.12.5",
     "tailwindcss": "^3.4.14",
     "ws": "^8.18.0",
     "zustand": "^5.0.1"
@@ -67,7 +67,6 @@
     "@types/jest": "^29.5.12",
     "@types/node": "^22.8.6",
     "@types/react": "~18.3.12",
-    "@types/react-native": "^0.72.8",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.7",
     "@types/ws": "^8.5.13",
@@ -76,10 +75,13 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "jest": "^29.2.1",
-    "jest-expo": "~51.0.3",
+    "jest-expo": "~52.0.6",
     "prettier": "^3.3.3",
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
+  },
+  "overrides": {
+    "@expo/config-plugins": "~9.0.0"
   },
   "private": true
 }
