--- a/eas.json
+++ b/eas.json
@@ -9,13 +9,25 @@
       "distribution": "internal",
       "ios": {
         "simulator": true
+      },
+      "env": {
+        "DATABASE_URL": "@DATABASE_URL",
+        "EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY": "@EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY"
       }
     },
     "preview": {
-      "distribution": "internal"
+      "distribution": "internal",
+      "env": {
+        "DATABASE_URL": "@DATABASE_URL",
+        "EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY": "@EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY"
+      }
     },
     "production": {
-      "autoIncrement": true
+      "autoIncrement": true,
+      "env": {
+        "DATABASE_URL": "@DATABASE_URL",
+        "EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY": "@EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY"
+      }
     }
   }
 }
