--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-native-community/datetimepicker": "8.2.0",
     "@react-native-picker/picker": "^2.9.0",
     "@react-navigation/native": "^7.0.14",
+    "@vercel/node": "^5.2.0",
     "date-fns": "^4.1.0",
     "expo": "^52.0.0",
     "expo-blur": "~14.0.3",
