--- a/eas.json
+++ b/eas.json
@@ -12,21 +12,24 @@
       },
       "env": {
         "DATABASE_URL": "@DATABASE_URL",
-        "EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY": "@EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY"
+        "EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY": "@EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY",
+        "VERCEL_PROTECTION_BYPASS": "@VERCEL_PROTECTION_BYPASS"
       }
     },
     "preview": {
       "distribution": "internal",
       "env": {
         "DATABASE_URL": "@DATABASE_URL",
-        "EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY": "@EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY"
+        "EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY": "@EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY",
+        "VERCEL_PROTECTION_BYPASS": "@VERCEL_PROTECTION_BYPASS"
       }
     },
     "production": {
       "autoIncrement": true,
       "env": {
         "DATABASE_URL": "@DATABASE_URL",
-        "EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY": "@EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY"
+        "EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY": "@EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY",
+        "VERCEL_PROTECTION_BYPASS": "@VERCEL_PROTECTION_BYPASS"
       }
     }
   }
