--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "metro-react-native-babel-preset": "^0.77.0",
     "nativewind": "^4.1.21",
     "pg": "^8.11.3",
+    "plaid": "^34.0.0",
     "postgres": "^3.4.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -51,6 +52,7 @@
     "react-native-ionicons": "^4.6.5",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-modal": "^13.0.1",
+    "react-native-plaid-link-sdk": "^12.1.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
