Update app.json for rebranding
- Changed app name to "Legacy Mindset - Budget Tracker" and updated the scheme to "legacy-mindset-budget-tracker" to reflect the new branding.

--- a/app.json
+++ b/app.json
@@ -1,11 +1,11 @@
 {
   "expo": {
-    "name": "Legacy Mind - Budget Tracker",
+    "name": "Legacy Mindset - Budget Tracker",
     "slug": "budget_app",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
-    "scheme": "legacy-mind-budget-tracker",
+    "scheme": "legacy-mindset-budget-tracker",
     "userInterfaceStyle": "light",
     "splash": {
       "image": "./assets/images/splash.png",
