Update package.json and tsconfig.json for module support and Node.js version
- Changed the main entry point in package.json to "dist/index.js".
- Set the module type to "module" in package.json and specified Node.js engine version.
- Updated module type to "ES2020" and added module resolution in tsconfig.json.

--- a/lambda-recurring/package.json
+++ b/lambda-recurring/package.json
@@ -2,7 +2,11 @@
   "name": "recurring-transactions-lambda",
   "version": "1.0.0",
   "description": "AWS Lambda function to process recurring incomes and fixed costs",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "type": "module",
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "scripts": {
     "build": "tsc",
     "package": "zip -r recurring-transactions-lambda.zip . -x '*.ts' 'tsconfig.json' 'node_modules/typescript/*' 'node_modules/@types/*'",
