--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@vercel/node": "^5.2.0",
     "date-fns": "^4.1.0",
     "expo": "^52.0.0",
+    "expo-auth-session": "^6.2.1",
     "expo-blur": "~14.0.3",
     "expo-build-properties": "~0.13.3",
     "expo-constants": "~17.0.8",
@@ -52,7 +53,7 @@
     "react-native-ionicons": "^4.6.5",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-modal": "^13.0.1",
-    "react-native-plaid-link-sdk": "^12.1.1",
+    "react-native-plaid-link-sdk": "^12.3.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
