-Plaid connections works but nothing else works like fetching transactions or connected accounts. Have to reconnect after each app reload.
Refactor Plaid API integration and enhance database schema

- Updated API endpoints for Plaid account and transaction handling, improving data retrieval and synchronization.
- Refactored SQL queries to streamline data access and ensure consistency in user identification.
- Enhanced database schema for budget categories and transactions, adding default values and improving data integrity.
- Removed deprecated API files and adjusted routing for better organization and maintainability.
- Updated package dependencies, including `react-native-plaid-link-sdk` to version 12.4.0, and added new libraries for improved functionality.

--- a/app.json
+++ b/app.json
@@ -12,22 +12,18 @@
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.hemal.legacy-mind-budget-tracker",
-      "config": {
-        "usesNonExemptEncryption": false
-      }
+      "bundleIdentifier": "com.hemal.legacymindbudgettracker",
+      "config": { "usesNonExemptEncryption": false }
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "package": "com.hemal.legacy-mind-budget-tracker"
+      "package": "com.hemal.legacymindbudgettracker"
     },
     "web": {
       "bundler": "metro",
@@ -41,20 +37,14 @@
       [
         "expo-build-properties",
         {
-          "ios": {
-            "deploymentTarget": "15.1",
-            "useFrameworks": "static"
-          }
+          "ios": { "deploymentTarget": "15.1", "useFrameworks": "static" }
         }
-      ]
+      ],
+      "expo-dev-client"
     ],
-    "experiments": {
-      "typedRoutes": true
-    },
+    "experiments": { "typedRoutes": true },
     "extra": {
-      "eas": {
-        "projectId": "3ae72a69-aec2-44da-bdfa-b2536d86ae7c"
-      }
+      "eas": { "projectId": "3ae72a69-aec2-44da-bdfa-b2536d86ae7c" }
     },
     "owner": "hemal12"
   }
