Enhance Plaid API integration and improve transaction handling
- Added new scripts in package.json for development and API management.
- Updated tsconfig.json to include stricter type checks and improved module resolution.
- Refactored Plaid API endpoints to support enhanced transaction fetching and account management.
- Improved error handling and logging in Plaid integration components.
- Updated transaction synchronization logic to handle both manual and Plaid transactions more effectively.
- Enhanced user interface in the Bank and Dashboard components for better user experience and clarity.

--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
+    "dev:api": "mv .vercel .vercel.temp 2>/dev/null; npx vercel dev; mv .vercel.temp .vercel 2>/dev/null",
+    "dev:expo": "expo start",
+    "dev": "echo 'Terminal 1: npm run dev:api' && echo 'Terminal 2: npm run dev:expo'",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo run:android",
     "ios": "expo run:ios",
