--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -8,22 +8,16 @@
     "forceConsistentCasingInFileNames": true,
     "noEmit": true,
     "esModuleInterop": true,
-    "module": "esnext",
+    "module": "commonjs",
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "isolatedModules": true,
-    "jsx": "preserve",
+    "isolatedModules": false,
+    "declaration": false,
+    "noImplicitAny": false,
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["../*"]
     }
   },
-  "include": [
-    "**/*.ts",
-    "**/*.tsx",
-    ".expo/types/**/*.ts",
-    "expo-env.d.ts",
-    "nativewind-env.d.ts"
-  ],
-  "exclude": ["node_modules", "api"],
-  "extends": "./expo/tsconfig.base.json"
+  "include": ["**/*.ts", "../types/**/*.ts"],
+  "exclude": ["node_modules"]
 }
