--- a/expo/tsconfig.base.json
+++ b/expo/tsconfig.base.json
@@ -12,18 +12,7 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve",
-    "paths": {
-      "@/*": ["./*"]
-    }
-  },
-  "include": [
-    "**/*.ts",
-    "**/*.tsx",
-    ".expo/types/**/*.ts",
-    "expo-env.d.ts",
-    "nativewind-env.d.ts"
-  ],
-  "exclude": ["node_modules", "api"],
-  "extends": "./expo/tsconfig.base.json"
+    "jsx": "preserve"
+  }
 }
+
