--- a/vercel.json
+++ b/vercel.json
@@ -10,7 +10,7 @@
       "headers": [
         {
           "key": "Access-Control-Allow-Origin",
-          "value": "*"
+          "value": "https://your-production-domain.com"
         },
         {
           "key": "Access-Control-Allow-Methods",
