Update bundle identifier format in app.json for consistency

--- a/app.json
+++ b/app.json
@@ -15,7 +15,7 @@
     "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.hemal.legacymindbudgettracker",
+      "bundleIdentifier": "com.hemal.legacy-mind-budget-tracker",
       "config": { "usesNonExemptEncryption": false }
     },
     "android": {
