Update app.json to rename the budget tracker application and modify the slug for better clarity and consistency

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "Legacy Mindset - Budget Tracker",
-    "slug": "budget_app",
+    "name": "Legacy Mindset",
+    "slug": "legacy-mind-budget-tracker",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
