Update app.json to change the slug of the application for improved clarity and alignment with the new branding

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "Legacy Mindset",
-    "slug": "legacy-mind-budget-tracker",
+    "slug": "budget_app",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
